# demopilot-interactive-dashboard

./: .gitignore  CLAUDE.md  LANGSMITH_EVALUATION_GUIDE.md  README.md  pyproject.toml  run_evaluation.py
.claude/: settings.json
.claude/agents/: eval-runner.md
.claude/hooks/: trigger-eval-on-retrieval-change.sh
app/: __init__.py  main.py
app/api/v1/evaluation/: __init__.py  routes.py
app/api/v1/knowledge/: __init__.py  routes.py
app/api/v1/voice/: __init__.py  routes.py
app/config/: knowledge_docs.py  langsmith_config.py  logging_config.py  settings.py
app/core/evaluation/: __init__.py  evaluation_runner.py  evaluators.py
app/core/knowledge/: __init__.py  agent 2.py  agent.py  html_extractor.py
app/core/voice/: __init__.py  vapi_client.py
app/models/: schemas.py
docs/: PRD.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: ThemeRegistry.tsx  globals.css  layout.tsx  page.tsx
frontend/app/components/chat/: ChatInterface.tsx
frontend/app/components/demo/: DemoViewer.tsx
frontend/app/components/voice/: VoiceWidget.tsx
frontend/app/lib/: knowledgeClient.ts  storylaneConfig.ts  storylaneController.ts  storylaneMapper.ts
scripts/: export_retrievals.py
tests/: test_evaluators.py  test_html_extractor.py  test_knowledge_agent.py
